# CATreus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  defaults.cfg  pyproject.toml
anim/: .gitignore  convert.ipynb
case/: battery cover.stl  case_bottom.stl  case_top.stl
kbd_firmware/: CMakeLists.txt  kbd_firmware.code-workspace  nrf54l15dk_nrf54l15_cpuapp_ns.overlay  pm_static.yml  prj.conf
kbd_firmware/src/: anim_idle.c  anim_idle.h  anim_sleep.c  anim_sleep.h  anim_wake.c  anim_wake.h  bluetooth.c  bluetooth.h  config.h  display.c  display.h  hid.c  hid.h  key_layout.c  key_layout.h  key_matrix.c  key_matrix.h  leds.c  leds.h  main.c  mandelbrot.c  mandelbrot.h  nvs.c  nvs.h  pmic.c  pmic.h  ui.c  ui.h  usb_hid_keys.h
kbd_firmware/src/animations/: anim.h  anim_idle.c  anim_idle.h  anim_sleep.c  anim_sleep.h  anim_wake.c  anim_wake.h
kbd_firmware/src/applications/: README.md  breakout.c  breakout.h  gol.c  gol.h  lander.c  lander.h  mandelbrot.c  mandelbrot.h  mines.c  mines.h  snake.c  (+6 more)
keyboard/: keyboard.kicad_pcb  keyboard.kicad_prl  keyboard.kicad_pro  keyboard.kicad_sch
keyboard/gerbers/: keyboard-B_Paste.gbp  keyboard-B_Silkscreen.gbo  keyboard-F_Cu.gtl  keyboard-NPTH.drl  keyboard-PTH-drl_map.gbr  keyboard-PTH.drl  keyboard-job.gbrjob
pcb/: keyboard.kicad_pcb  keyboard.kicad_prl  keyboard.kicad_pro  keyboard.kicad_sch
pcb/gerbers/: keyboard-B_Cu.gbl  keyboard-B_Mask.gbs  keyboard-Edge_Cuts.gm1  keyboard-F_Mask.gts  keyboard-F_Paste.gtp  keyboard-F_Silkscreen.gto  keyboard-NPTH-drl_map.gbr
pixel_face/: pixel_face.piskel
(+9 files in other folders)
