[tool.poetry]
name = "keyboard"
version = "0.1.0"
description = ""
authors = ["Paul Klinger <klinger.paul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.6"
matplotlib = "^3.10.3"
pillow = "^11.2.1"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
